--- a/index.html
+++ b/index.html
@@ -7,122 +7,106 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     body {
-      background: #0a0a0a;
-      color: #f8f8f8;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      position: relative;
-      overflow-x: hidden;
+      background: linear-gradient(to bottom right, #1a1a1a, #2b2b2b);
+      background-image: url('cpuback.png');
+      background-size: cover;
+      background-attachment: fixed;
+      background-position: center;
+      color: #ff914d;
     }
-
-    /* Background image layer */
-    .background {
-      position: fixed;
-      top: 0; left: 0; right: 0; bottom: 0;
-      background: url('cpuback.png') no-repeat center center/cover;
-      z-index: -10;
-      opacity: 0.35;
-      filter: blur(2px);
+    .bg-dark {
+      background: rgba(20, 20, 20, 0.8);
+      backdrop-filter: blur(5px);
     }
-
-    /* Neon orange pulse glow */
-    @keyframes neonPulse {
-      0%, 100% { box-shadow: 0 0 10px #ff6600, 0 0 20px #ff6600; }
-      50% { box-shadow: 0 0 25px #ff751a, 0 0 40px #ff6600; }
-    }
-    .neon-border {
-      border: 2px solid #ff6600;
-      animation: neonPulse 2.5s infinite ease-in-out;
-    }
-
-    /* Placeholder for date input */
-    input[type="date"]::before {
-      color: #ff6600;
-      content: attr(placeholder);
-      position: absolute;
-      left: 12px;
-    }
-    input[type="date"]:focus::before,
-    input[type="date"]:valid::before {
-      content: "";
+    input::placeholder,
+    textarea::placeholder,
+    select:invalid {
+      color: #ff914d;
+      opacity: 0.8;
     }
   </style>
 </head>
 
 <body class="min-h-screen flex flex-col items-center">
-  <div class="background"></div>
 
   <!-- Header -->
-  <header class="w-full text-center py-8 bg-black bg-opacity-60 backdrop-blur-md neon-border">
-    <h1 class="text-4xl font-bold text-orange-400 drop-shadow-lg">🛠️ The Hardware Hotline</h1>
-    <p class="text-lg text-gray-200 mt-2">30 Years of Experience — Free Tech Help & Repairs</p>
+  <header class="w-full py-6 text-center shadow-lg bg-dark">
+    <h1 class="text-4xl font-extrabold text-orange-400">🛠️ The Hardware Hotline</h1>
+    <p class="text-lg mt-2 text-gray-200">Free Tech Help & Repairs — 30 Years of Experience</p>
   </header>
 
   <main class="w-full max-w-3xl p-6 space-y-8">
 
-    <!-- Donate Section -->
-    <section class="bg-black bg-opacity-70 p-6 rounded-2xl shadow-md neon-border text-center">
-      <form action="https://www.paypal.com/donate" method="post" target="_top">
-        <input type="hidden" name="business" value="blackicerocks82@gmail.com" />
-        <input type="hidden" name="currency_code" value="USD" />
-        <button type="submit"
-          class="bg-orange-500 text-black font-bold py-3 px-6 rounded-lg hover:shadow-lg hover:bg-orange-400 transition">
-          Donate
-        </button>
-      </form>
-      <p class="text-gray-300 mt-3 text-sm italic">Donations are optional — all services remain 100% free.</p>
-    </section>
-
-    <!-- Services -->
-    <section class="bg-black bg-opacity-70 p-6 rounded-2xl shadow-md neon-border">
+    <!-- Services Section -->
+    <section class="rounded-2xl shadow-xl p-6 bg-dark">
       <h2 class="text-2xl font-bold mb-4 text-orange-400">💡 Free Services We Offer</h2>
       <ul class="list-disc list-inside space-y-2 text-gray-200">
         <li>🔧 Free Desktop & Laptop Diagnostics</li>
-        <li>🖥️ Free Virus & Malware Removal</li>
+        <li>🦠 Free Virus & Malware Removal</li>
         <li>💽 Free Data Backup & Recovery Help</li>
-        <li>⚙️ Free Computer Cleaning</li>
-        <li>🧰 Free Computer Build Labor (you only pay for parts)</li>
-        <li>🪛 Free Repair Labor</li>
-        <li>🚀 Free Computer Speed-up & Optimization</li>
+        <li>🧹 Free Computer Cleaning</li>
+        <li>🖥️ Free Custom Computer Build Labor (only pay for parts)</li>
+        <li>🔩 Free Repair Labor</li>
+        <li>⚙️ Free Computer Speed-up & Optimization</li>
       </ul>
     </section>
 
     <!-- Appointment Form -->
-    <section class="bg-black bg-opacity-70 p-6 rounded-2xl shadow-md neon-border">
+    <section class="rounded-2xl shadow-xl p-6 bg-dark">
       <h2 class="text-2xl font-bold mb-4 text-orange-400">📅 Schedule a Drop-off Appointment</h2>
-      <form id="appointmentForm" class="space-y-4 relative">
+      <form id="appointmentForm" class="space-y-4">
         <input type="text" id="name" placeholder="Your Name" required
           class="w-full p-2 border border-gray-700 rounded-lg bg-gray-900 text-white" />
-        <div class="relative">
-          <input type="date" id="date" required placeholder="mm/dd/yyyy"
-            class="w-full p-2 border border-gray-700 rounded-lg bg-gray-900 text-white appearance-none" />
-        </div>
+        <input type="date" id="date" required placeholder="mm/dd/yyyy"
+          class="w-full p-2 border border-gray-700 rounded-lg bg-gray-900 text-white placeholder-orange-400" />
         <select id="time" required class="w-full p-2 border border-gray-700 rounded-lg bg-gray-900 text-white">
           <option value="">Select Preferred Time</option>
-          <option>Morning (9AM - 11AM)</option>
-          <option>Midday (11AM - 2PM)</option>
-          <option>Afternoon (2PM - 5PM)</option>
+          <option>8AM - 9AM</option>
+          <option>9AM - 10AM</option>
+          <option>10AM - 11AM</option>
+          <option>11AM - 12PM</option>
+          <option>12PM - 1PM</option>
+          <option>1PM - 2PM</option>
+          <option>2PM - 3PM</option>
+          <option>3PM - 4PM</option>
+          <option>4PM - 5PM</option>
+          <option>5PM - 6PM</option>
         </select>
         <textarea id="description" placeholder="Describe your issue..."
           class="w-full p-2 border border-gray-700 rounded-lg bg-gray-900 text-white" required></textarea>
         <button type="submit"
-          class="w-full bg-orange-500 hover:bg-orange-400 text-black font-semibold py-2 rounded-lg transition shadow-md">
+          class="w-full bg-orange-500 hover:bg-orange-600 text-black font-bold py-2 rounded-lg transition transform hover:scale-105">
           💾 Save Appointment Request
         </button>
       </form>
-      <p id="responseMessage" class="mt-3 text-center font-semibold text-orange-400"></p>
+      <p id="responseMessage" class="mt-3 text-center font-semibold text-white"></p>
     </section>
 
     <!-- Appointments View -->
-    <section class="bg-black bg-opacity-70 p-6 rounded-2xl shadow-md neon-border">
+    <section class="rounded-2xl shadow-xl p-6 bg-dark">
       <h2 class="text-2xl font-bold mb-4 text-orange-400">🔍 Upcoming Appointments</h2>
       <div id="appointmentsList" class="space-y-3 text-gray-200">
         <p>Loading appointments...</p>
       </div>
     </section>
+
+    <!-- Donate Button -->
+    <section class="rounded-2xl shadow-xl p-6 text-center bg-dark">
+      <p class="text-gray-200 mb-2">Donations are optional, but always appreciated 💖</p>
+      <form action="https://www.paypal.com/donate" method="post" target="_top">
+        <input type="hidden" name="business" value="blackicerocks82@gmail.com" />
+        <input type="hidden" name="currency_code" value="USD" />
+        <button type="submit"
+          class="bg-orange-500 text-black font-bold py-3 px-6 rounded-lg hover:shadow-lg hover:bg-orange-600 transition transform hover:scale-105">
+          Donate
+        </button>
+      </form>
+    </section>
+
   </main>
 
-  <footer class="w-full text-center py-6 mt-auto bg-black bg-opacity-60 neon-border text-gray-400 text-sm">
-    © 2025 The Hardware Hotline. All Rights Reserved.
+  <footer class="bg-dark text-gray-400 w-full text-center py-4 mt-auto">
+    <p>© 2025 The Hardware Hotline. All Rights Reserved.</p>
   </footer>
 
   <script>
@@ -138,15 +122,18 @@
         const res = await fetch(SHEET_API);
         const text = await res.text();
         const json = JSON.parse(text.match(/{.*}/s)[0]);
-        appointmentsList.innerHTML = json.length
-          ? json.map(a => `
-            <div class="p-3 border border-gray-700 rounded-lg bg-gray-900 bg-opacity-70">
+        if (json.length === 0) {
+          appointmentsList.innerHTML = "<p>No appointments yet — be the first!</p>";
+        } else {
+          appointmentsList.innerHTML = json.map(a => `
+            <div class="p-3 border border-gray-700 rounded-lg shadow-sm bg-gray-800 text-white">
               <strong class="text-orange-400">${a.name}</strong><br>
               📅 ${a.date} — 🕒 ${a.time}<br>
               💬 ${a.description}
-            </div>`).join("")
-          : "<p>No appointments yet — be the first!</p>";
-      } catch {
+            </div>
+          `).join("");
+        }
+      } catch (err) {
         appointmentsList.innerHTML = `<p class="text-red-500">Error loading appointments.</p>`;
       }
     }
@@ -154,7 +141,7 @@
     form.addEventListener("submit", async (e) => {
       e.preventDefault();
       responseMessage.textContent = "Saving...";
-      const data = {
+      const formData = {
         name: document.getElementById("name").value,
         date: document.getElementById("date").value,
         time: document.getElementById("time").value,
@@ -162,7 +149,10 @@
       };
 
       try {
-        const res = await fetch(SHEET_API, { method: "POST", body: JSON.stringify(data) });
+        const res = await fetch(SHEET_API, {
+          method: "POST",
+          body: JSON.stringify(formData)
+        });
         const text = await res.text();
         const json = JSON.parse(text.match(/{.*}/s)[0]);
         if (json.status === "success") {
@@ -172,7 +162,8 @@
         } else {
           responseMessage.textContent = "⚠️ " + (json.message || "Error saving appointment.");
         }
-      } catch {
+      } catch (err) {
+        console.error("POST failed:", err);
         responseMessage.textContent = "❌ Network error — could not book appointment.";
       }
     });
