--- a/index.html
+++ b/index.html
@@ -6,53 +6,78 @@
   <title>The Hardware Hotline</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
+    @keyframes pulseGlow {
+      0% {
+        box-shadow: 0 0 10px rgba(255, 145, 77, 0.3), 0 0 20px rgba(255, 145, 77, 0.2);
+        border-color: rgba(255, 145, 77, 0.5);
+      }
+      50% {
+        box-shadow: 0 0 25px rgba(255, 145, 77, 0.8), 0 0 45px rgba(255, 145, 77, 0.4);
+        border-color: rgba(255, 145, 77, 1);
+      }
+      100% {
+        box-shadow: 0 0 10px rgba(255, 145, 77, 0.3), 0 0 20px rgba(255, 145, 77, 0.2);
+        border-color: rgba(255, 145, 77, 0.5);
+      }
+    }
+
     body {
-      background: linear-gradient(to bottom right, #1a1a1a, #2b2b2b);
+      background: linear-gradient(to bottom right, #111, #1a1a1a);
       background-image: url('cpuback.png');
       background-size: cover;
       background-attachment: fixed;
       background-position: center;
       color: #ff914d;
+      overflow-x: hidden;
     }
 
     .bg-dark {
       background: rgba(20, 20, 20, 0.8);
-      backdrop-filter: blur(5px);
+      backdrop-filter: blur(6px);
       border: 1px solid rgba(255, 145, 77, 0.5);
-      box-shadow: 0 0 15px rgba(255, 145, 77, 0.2);
+      animation: pulseGlow 3s infinite ease-in-out;
+      border-radius: 1rem;
     }
 
     input,
     textarea,
     select {
-      border: 1px solid rgba(255, 145, 77, 0.6);
-      box-shadow: 0 0 10px rgba(255, 145, 77, 0.2);
+      border: 1px solid rgba(255, 145, 77, 0.7);
+      background-color: rgba(10, 10, 10, 0.9);
+      color: #fff;
+      animation: pulseGlow 4s infinite ease-in-out;
+      border-radius: 0.5rem;
+      padding: 0.5rem;
       transition: all 0.3s ease;
     }
 
     input:focus,
     textarea:focus,
     select:focus {
-      outline: none;
-      box-shadow: 0 0 15px rgba(255, 145, 77, 0.6);
+      box-shadow: 0 0 25px rgba(255, 145, 77, 0.9);
       border-color: #ff914d;
+      transform: scale(1.01);
     }
 
     button {
+      animation: pulseGlow 3.5s infinite ease-in-out;
+      background-color: #ff914d;
+      border: none;
+      color: black;
+      font-weight: bold;
+      border-radius: 0.5rem;
       transition: all 0.3s ease;
-      box-shadow: 0 0 10px rgba(255, 145, 77, 0.4);
     }
 
     button:hover {
-      box-shadow: 0 0 20px rgba(255, 145, 77, 0.8);
-      transform: scale(1.05);
+      transform: scale(1.07);
+      box-shadow: 0 0 35px rgba(255, 145, 77, 1);
     }
 
     input::placeholder,
-    textarea::placeholder,
-    select:invalid {
+    textarea::placeholder {
       color: #ff914d;
-      opacity: 0.8;
+      opacity: 0.9;
     }
   </style>
 </head>
@@ -68,7 +93,7 @@
   <main class="w-full max-w-3xl p-6 space-y-8">
 
     <!-- Services Section -->
-    <section class="rounded-2xl shadow-xl p-6 bg-dark">
+    <section class="shadow-xl p-6 bg-dark">
       <h2 class="text-2xl font-bold mb-4 text-orange-400">💡 Free Services We Offer</h2>
       <ul class="list-disc list-inside space-y-2 text-gray-200">
         <li>🔧 Free Desktop & Laptop Diagnostics</li>
@@ -82,14 +107,12 @@
     </section>
 
     <!-- Appointment Form -->
-    <section class="rounded-2xl shadow-xl p-6 bg-dark">
+    <section class="shadow-xl p-6 bg-dark">
       <h2 class="text-2xl font-bold mb-4 text-orange-400">📅 Schedule a Drop-off Appointment</h2>
       <form id="appointmentForm" class="space-y-4">
-        <input type="text" id="name" placeholder="Your Name" required
-          class="w-full p-2 rounded-lg bg-gray-900 text-white" />
-        <input type="date" id="date" required placeholder="mm/dd/yyyy"
-          class="w-full p-2 rounded-lg bg-gray-900 text-white placeholder-orange-400" />
-        <select id="time" required class="w-full p-2 rounded-lg bg-gray-900 text-white">
+        <input type="text" id="name" placeholder="Your Name" required class="w-full" />
+        <input type="date" id="date" required placeholder="mm/dd/yyyy" class="w-full" />
+        <select id="time" required class="w-full">
           <option value="">Select Preferred Time</option>
           <option>8AM - 9AM</option>
           <option>9AM - 10AM</option>
@@ -102,10 +125,8 @@
           <option>4PM - 5PM</option>
           <option>5PM - 6PM</option>
         </select>
-        <textarea id="description" placeholder="Describe your issue..."
-          class="w-full p-2 rounded-lg bg-gray-900 text-white" required></textarea>
-        <button type="submit"
-          class="w-full bg-orange-500 hover:bg-orange-600 text-black font-bold py-2 rounded-lg transition">
+        <textarea id="description" placeholder="Describe your issue..." class="w-full" required></textarea>
+        <button type="submit" class="w-full py-2 hover:scale-105 transition">
           💾 Save Appointment Request
         </button>
       </form>
@@ -113,7 +134,7 @@
     </section>
 
     <!-- Appointments View -->
-    <section class="rounded-2xl shadow-xl p-6 bg-dark">
+    <section class="shadow-xl p-6 bg-dark">
       <h2 class="text-2xl font-bold mb-4 text-orange-400">🔍 Upcoming Appointments</h2>
       <div id="appointmentsList" class="space-y-3 text-gray-200">
         <p>Loading appointments...</p>
@@ -121,13 +142,12 @@
     </section>
 
     <!-- Donate Button -->
-    <section class="rounded-2xl shadow-xl p-6 text-center bg-dark">
+    <section class="shadow-xl p-6 text-center bg-dark">
       <p class="text-gray-200 mb-2">Donations are optional, but always appreciated 💖</p>
       <form action="https://www.paypal.com/donate" method="post" target="_top">
         <input type="hidden" name="business" value="blackicerocks82@gmail.com" />
         <input type="hidden" name="currency_code" value="USD" />
-        <button type="submit"
-          class="bg-orange-500 text-black font-bold py-3 px-6 rounded-lg hover:shadow-lg hover:bg-orange-600 transition">
+        <button type="submit" class="py-3 px-6">
           Donate
         </button>
       </form>
@@ -156,7 +176,7 @@
           appointmentsList.innerHTML = "<p>No appointments yet — be the first!</p>";
         } else {
           appointmentsList.innerHTML = json.map(a => `
-            <div class="p-3 border border-orange-400 rounded-lg shadow-md bg-gray-900">
+            <div class="p-3 border border-orange-400 rounded-lg bg-gray-900 animate-pulse">
               <strong class="text-orange-400">${a.name}</strong><br>
               📅 ${a.date} — 🕒 ${a.time}<br>
               💬 ${a.description}
