--- a/index.html
+++ b/index.html
@@ -158,14 +158,16 @@
       </form>
     </section>
 
-    <!-- Contact & Testimonials Section -->
-    <section class="shadow-xl p-6 bg-dark">
-      <h2 class="text-2xl font-bold mb-4 text-orange-400">📬 Contact & Testimonials</h2>
-      <p class="text-gray-200 mb-2">
-        Questions, concerns, or testimonials? Send me an email or leave a message!
+    <!-- Contact Section -->
+    <section class="shadow-xl p-6 bg-dark text-center">
+      <h2 class="text-2xl font-bold mb-2 text-orange-400">📬 Contact</h2>
+      <p class="text-gray-200 mb-4">
+        Questions, concerns? Send me an email or leave a message!
       </p>
       <p class="text-gray-200 font-semibold">
-        blackicerocks82@gmail.com
+        <a href="mailto:blackicerocks82@gmail.com" class="hover:underline">
+          blackicerocks82@gmail.com
+        </a>
       </p>
     </section>
 
